--- a/package.json
+++ b/package.json
@@ -6,6 +6,31 @@
   "author": "Nick Bond <bond.n@husky.neu.edu>",
   "license": "MIT",
   "dependencies": {
-    "fs-extra": "^5.0.0"
+    "audioconcat": "^0.1.3",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "cheerio": "^1.0.0-rc.2",
+    "domelementtype": "^1.3.0",
+    "es6-promisify": "^5.0.0",
+    "fs-extra": "^5.0.0",
+    "google-translate-api": "^2.3.0",
+    "image-downloader": "^3.3.0",
+    "image-size": "^0.6.2",
+    "jimp": "^0.2.28",
+    "jsonfile": "^4.0.0",
+    "node-gtts": "^2.0.2",
+    "promisify-node": "^0.4.0",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
+    "say": "^0.14.0",
+    "shutterstock": "^0.13.0",
+    "videoshow": "^0.1.11"
   }
 }
