--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jimp": "^0.2.28",
     "jsonfile": "^4.0.0",
     "node-gtts": "^2.0.2",
+    "pick-one": "^1.0.1",
     "promisify-node": "^0.4.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
