--- a/package.json
+++ b/package.json
@@ -16,21 +16,25 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
+    "caption": "^0.1.1",
     "cheerio": "^1.0.0-rc.2",
     "domelementtype": "^1.3.0",
     "es6-promisify": "^5.0.0",
     "fs-extra": "^5.0.0",
+    "get-audio-duration": "^0.0.1",
     "google-translate-api": "^2.3.0",
     "image-downloader": "^3.3.0",
     "image-size": "^0.6.2",
     "jimp": "^0.2.28",
     "jsonfile": "^4.0.0",
+    "node-command-line": "^1.0.2",
     "node-gtts": "^2.0.2",
     "pick-one": "^1.0.1",
     "promisify-node": "^0.4.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "say": "^0.14.0",
+    "short-id": "^0.1.0-1",
     "shutterstock": "^0.13.0",
     "videoshow": "^0.1.11"
   }
