--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Nick Bond <bond.n@husky.neu.edu>",
   "license": "MIT",
   "dependencies": {
+    "array-to-txt-file": "^1.0.2",
     "audioconcat": "^0.1.3",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
@@ -16,6 +17,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
+    "bluebird": "^3.5.1",
     "caption": "^0.1.1",
     "cheerio": "^1.0.0-rc.2",
     "domelementtype": "^1.3.0",
@@ -27,6 +29,7 @@
     "image-size": "^0.6.2",
     "jimp": "^0.2.28",
     "jsonfile": "^4.0.0",
+    "node-cmd": "^3.0.0",
     "node-command-line": "^1.0.2",
     "node-gtts": "^2.0.2",
     "pick-one": "^1.0.1",
